# pokemon_api

./: .gitignore  Procfile  README.md  create_project_environment.sh  requirements.txt  setup_project_environment.sh
django-pokemon/: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg
django-pokemon/pokemon/: handlers.py  models.py  serializers.py  tests.py  urls.py  views.py
django-pokemon/pokemon/migrations/: 0001_initial.py  0002_parse_csv.py
myproject/: db.sqlite3
myproject/myproject/: settings.py  urls.py
