[metadata]
name = django-pokemon
version = 0.1
description = A Django app to serve as a Pokemon-API
long_description = file: README.md
url = https://www.example.com/
author = Cem Yusuf Aydogdu
author_email = cem.y.ayd@gmail.com
license = GNU AGPLv3 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU AGPLv3 
    Operating System :: Ubuntu 18.04 bionic
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet

[options]
include_package_data = true
packages = find:
